--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,17 @@
 <resources>
-    <string name="app_name">HW2_Manan_Wason</string>
+    <string name="app_name">MyPersonalDetails </string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="result_activity">Info Activity</string>
     <string name="action_settings">Settings</string>
     <string name="edit_text_name">Enter Name</string>
+    <string name="edit_date">Click to Select Date</string>
     <string name="enter_age">Select Age</string>
+    <string name="name">Name</string>
+    <string name="age">Age</string>
+    <string name="DOB">Date of Birth</string>
+    <string name="submit">Submit</string>
+    <string name="clear">Clear</string>
+    <string name="na">NA</string>
+
+    <string name="signature">Created by Manan Wason (2013056)</string>
 </resources>
